--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Export AWS_REGION to env
-        run: echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> $GITHUB_ENV
+        run: echo "AWS_REGION=${{ secrets.AWS_REGION }}"
 
 
       - name: Configure AWS Credentials
