--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -59,6 +59,11 @@ jobs:
         with:
           terraform_version: 1.8.2
 
+      - name: HashiCorp Cloud remote cloud login
+        run: terraform login
+        env:
+          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
+
       - name: Terraform Init
         run: terraform init
 
