--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -59,10 +59,20 @@ jobs:
         with:
           terraform_version: 1.8.2
 
+      - name: Configure Terraform credentials for TFC
+        run: |
+              mkdir -p ~/.terraform.d
+              echo '{
+                "credentials": {
+                 "app.terraform.io": {
+                  "token": "${{ secrets.TF_API_TOKEN }}"
+                 }
+                }
+              }' > ~/.terraform.d/credentials.tfrc.json
+
+      
       - name: Terraform Init
         run: terraform init
-        env:
-          TF_API_TOKEN: ${{ secrets.TF_API_TOKEN }}
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan
