--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -78,6 +78,8 @@ jobs:
         run: terraform plan
 
       - name: Terraform Apply
+        env:
+          TF_VAR_image_tag: ${{ github.sha }}
         run: terraform apply -auto-approve
 
 
